# bmstu_algorithms

./: .gitignore  LICENSE  README.md  intro.md  pyproject.toml  requirements.txt  tmux.conf
credit/: questions.md  tasks.md
labs/lab_01/: lab_01.md
labs/lab_01/36/: Chizhmak_36.ipynb
labs/lab_01/37/Var_5/: Vec_matrix.py  matrix.py  q.py
labs/lab_01/example/: usage_time.py  usage_time_example.md
labs/lab_02/: lab_02.md  sort-algorithms.md
labs/lab_02/37/Var_5/: Otchet.docx  example.py  main.py  re.py
labs/lab_02/img/: method_sort.tex
labs/lab_03/: lab_03.md
labs/lab_04/: lab_04.md  stack-deque-queue.md
labs/lab_05/: hash.md  lab_05.md
labs/lab_06/: iterative-recursive.md  lab_06.md
labs/lab_07/: lab_07.md
labs/lab_08/: lab_08.md
labs/lab_09/: lab_9.md
labs/lab_10/: lab_10.md
lectures/lecture_01/: lecture_01.md
lectures/lecture_01/scripts/: hello_world_ru.py
lectures/lecture_02/: lecture_02.md
lectures/lecture_04/: lecture_04.md
lectures/lecture_05/: lecture_05.md
lectures/lecture_06/: lecture_06.md
lectures/lecture_07/: lecture_07.md
lectures/lecture_08/: lecture_08.md
lectures/lecture_09/: lecture_09.md
lectures/lecture_10/: lecture_10.md
lectures/lecture_11/: lecture_11.md
lectures/lecture_12/: lecture_12.md
lectures/lecture_13/: lecture_13.md
lectures/lecture_14/: lecture_14.md
lesson_01/: seminar_01_python.md
lesson_03/: lecture_03.md
