[tool.poetry]
name = "aads"
version = "2024.09"
description = "Алгоритмы и структуры данных"
authors = ["askras <askrasnikov@gmail.com>"]
license = "CC BY 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
notebook = "^7.2.2"
jupytext = "^1.16.4"
jupyterlab-rise = "^0.42.0"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
poetry-exec-plugin = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
