[tool.poetry]
name = "bmstu_algorithms"
version = "2024.09"
description = "Алгоритмы и структуры данных"
authors = ["askras <askrasnikov@gmail.com>"]
license = "CC BY 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
notebook = "^7.2.2"
jupytext = "^1.16.4"
jupyterlab-rise = "^0.42.0"
matplotlib = "^3.9.2"
jsonschema = "^4.23.0"
nb-js-diagrammers = "^0.0.9"
sympy = "^1.13.3"

[tool.poetry.group.dev.dependencies]
poetry-exec-plugin = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry-exec-plugin.commands]

spyder = """
spyder --workdir=./ --window-title bmstu_machinelearning --project ./ --conf-dir ./.config/spyder-py3
"""

freeze = "poetry export --format requirements.txt --output requirements.txt --without-hashes"

jupyter = """
export JUPYTERLAB_SETTINGS_DIR=./.jupyterlab_config/user-settings
export JUPYTERLAB_WORKSPACES_DIR=./.jupyterlab_config/workspaces
python -m jupyter lab --allow-root --NotebookApp.token='' --NotebookApp.password=''
"""


#======================================================================================================================
# Jupytext: Jupyter notebooks as Markdown documents, Julia, Python or R scripts
# https://github.com/mwouts/jupytext
#======================================================================================================================
[tool.jupytext]
#notebook_extensions = "md"
formats = "ipynb,md"
